--- a/src/components/Game/game.css
+++ b/src/components/Game/game.css
@@ -1,18 +1,49 @@
 * {
   box-sizing: border-box;
 }
-
-.game {
-  width: 150px;
-  height: 150px;
+.game__container {
+  height: 100vh;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fff;
+  color: #6e8387;
 }
 
-.game__square {
-  width: 50px;
-  height: 50px;
-  border: 1px solid;
+.title {
+  color: #0cca4a;
+  font-size: 35px;
+}
+
+.game {
+  width: 360px;
+  height: 360px;
+  display: flex;
+  flex-wrap: wrap;
+  border: none;
+  margin-top: 20px;
+}
+
+.score {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.score__single {
+  font-size: 25px;
+  margin: 5px 0;
+}
+
+.square {
+  width: 120px;
+  height: 120px;
+  font-size: 55px;
+  border: 1px solid #c8d3d5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
 }
 
 .disabled {
@@ -21,5 +52,23 @@
 }
 
 .color {
-  color: red;
+  color: #0cca4a;
+}
+
+.button__container {
+  display: flex;
+  margin-top: 20px;
+}
+
+@media only screen and (max-width: 600px) {
+  .game {
+    width: 270px;
+    height: 270px;
+    margin-top: 20px;
+  }
+  .square {
+    width: 90px;
+    height: 90px;
+    font-size: 55px;
+  }
 }
