--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -1,9 +1,15 @@
+body {
+  --green: #0cca4a;
+  --white: #fff;
+  --light_grey: #c8d3d5;
+}
+
 .button {
   height: 53px;
   width: 150px;
   border-radius: 14px;
-  background-color: #0cca4a;
-  color: #fcfafa;
+  background-color: var(--green);
+  color: var(--white);
   border: none;
   font-weight: 600;
   font-size: 20px;
@@ -13,14 +19,14 @@
 }
 
 .button:disabled {
-  background-color: #c8d3d5;
+  background-color: var(--light_grey);
   cursor: default;
 }
 
 .reset {
-  background-color: #fcfafa;
-  color: #0cca4a;
-  border: 1px solid #0cca4a;
+  background-color: var(--white);
+  color: var(--green);
+  border: 1px solid var(--green);
 }
 
 @media only screen and (max-width: 600px) {
